# metaflow-demo

./: .gitignore  1_Train Test Split.ipynb  2_Classifier.ipynb  README.md  pyproject.toml
