[project]
name = "metaflow-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.6.1",
    "jupyter>=1.1.1",
    "metaflow>=2.13.9",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
